# opendic-benchmark-dashboard

./: README.md  pyproject.toml  streamlit_app.py  taskfile.yml
src/opendic_benchmark_dashboard/: __init__.py  storage_data.py  streamlit_app.py
