[project]
name = "opendic-benchmark-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "akongstad", email = "kongstad@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pyarrow>=20.0.0",
    "streamlit>=1.32.0",
]

[project.scripts]
opendic-benchmark-dashboard = "opendic_benchmark_dashboard:main"
opendic-benchmark-streamlit = "opendic_benchmark_dashboard:run_streamlit_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
